finishing bokeh stock chart

--- a/stockMarket/FinancialGraph.ipynb
+++ b/stockMarket/FinancialGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = datetime.datetime(2019, 12, 14)\n",
+    "start = datetime.datetime(2018, 1, 1)\n",
     "end = datetime.datetime(2020, 1, 1)\n",
     "\n",
     "\n",
@@ -30,50 +30,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2019-12-16', '2019-12-17', '2019-12-19', '2019-12-23',\n",
-       "               '2019-12-26', '2019-12-30', '2019-12-31', '2020-01-02'],\n",
-       "              dtype='datetime64[ns]', name='Date', freq=None)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.index[df.Close > df.Open]"
+    "def up_down(close_price, open_price):    \n",
+    "    if close_price > open_price:\n",
+    "        value = \"Up\"\n",
+    "    elif close_price < open_price:\n",
+    "        value = \"Down\"\n",
+    "    else:\n",
+    "        value = \"Even\"\n",
+    "    \n",
+    "    return value\n",
+    "\n",
+    "df[\"Status\"] = [up_down(close_price, open_price) for close_price, open_price in zip(df.Close, df.Open)]\n",
+    "df[\"Average\"] = (df.Open + df.Close)/2\n",
+    "df[\"Height\"] = df.Close - df.Open\n",
+    "\n",
+    "hours = 12*60*60*1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "BokehUserWarning: ColumnDataSource's columns must be of the same length. Current lengths: ('x', 8), ('y', 12)\n",
-      "BokehUserWarning: ColumnDataSource's columns must be of the same length. Current lengths: ('height', 12), ('x', 8), ('y', 12)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p = figure(x_axis_type = \"datetime\", width = 1000, height= 400)\n",
+    "p = figure(x_axis_type = \"datetime\", width = 1000, height= 400, sizing_mode = \"stretch_both\", tools = \"box_zoom, wheel_zoom\")\n",
     "\n",
     "title = Title()\n",
     "title.text = \"AAPL Over Time\"\n",
     "p.title = title\n",
     "\n",
-    "hours = 12*60*60*1000\n",
+    "p.segment(df.index, df.High, df.index, df.Low, color = \"black\")\n",
     "\n",
-    "p.rect(df.index[df.Close > df.Open], (df.Open + df.Close)/2, hours, abs(df.Open-df.Close))\n",
+    "p.rect(df.index[df.Status == \"Up\"], df.Average[df.Status == \"Up\"], hours, df.Height[df.Status == \"Up\"], fill_color=\"green\", line_color=\"black\")\n",
+    "p.rect(df.index[df.Status == \"Down\"], df.Average[df.Status ==\"Down\"], hours, df.Height[df.Status == \"Down\"], fill_color=\"red\", line_color=\"black\")\n",
+    "\n",
     "\n",
     "output_file(\"Test.html\")\n",
     "show(p)"
